force-app/main/default/objects/Unified_Sync_Log__c/Unified_Sync_Log__c.object-meta.xml
<CustomObject>
    <label>Unified Sync Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Unified Sync Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unified Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>