force-app/main/default/objects/Unified_Sync_Log__c/fields/Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Name__c</fullName>
    <label>Batch Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>