force-app/main/default/objects/Unified_Sync_Log__c/fields/EndedAt__c.field-meta.xml
<CustomField>
    <fullName>EndedAt__c</fullName>
    <label>Ended At</label>
    <type>DateTime</type>
</CustomField>