force-app/main/default/objects/Unified_Sync_Log__c/fields/ErrorCount__c.field-meta.xml
<CustomField>
    <fullName>ErrorCount__c</fullName>
    <label>Error Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>