force-app/main/default/objects/Unified_Sync_Log__c/fields/SampleError__c.field-meta.xml
<CustomField>
    <fullName>SampleError__c</fullName>
    <label>Sample Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>