force-app/main/default/objects/Unified_Sync_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>PARTIAL</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>