force-app/main/default/objects/Unified_Sync_Log__c/fields/WindowEnd__c.field-meta.xml
<CustomField>
    <fullName>WindowEnd__c</fullName>
    <label>Window End</label>
    <type>DateTime</type>
</CustomField>