force-app/main/default/objects/Unified_Sync_Log__c/fields/WindowStart__c.field-meta.xml
<CustomField>
    <fullName>WindowStart__c</fullName>
    <label>Window Start</label>
    <type>DateTime</type>
</CustomField>