force-app/main/default/objects/Unified_Sync_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Stage__c</columns>
    <columns>ErrorCount__c</columns>
    <columns>StartedAt__c</columns>
    <columns>EndedAt__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>